// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Renders afspraak data > Large screen 1`] = `
<DocumentFragment>
  <div
    class="ams-row ams-row--gap-large"
  >
    <span
      class="ams-icon ams-icon--heading-2"
      hidden=""
    >
      <svg
        aria-hidden="true"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M23 13h-4v1h4v2h-1.5v4h-2v-4h-15v4h-2v-4H1v-2h1.72l.593-2.374a2 2 0 0 1 1.94-1.515h4.662a2 2 0 0 1 1.94 1.515L12.448 14H17v-1h-4V6h10zM4.782 14h5.605l-.472-1.889H5.254zM15 11h2v-1h2v1h2V8h-6z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M7.857 4.014a2.67 2.67 0 0 1 2.394 2.653l-.014.272a2.667 2.667 0 0 1-2.652 2.394l-.273-.014a2.67 2.67 0 0 1-2.38-2.38l-.014-.272A2.667 2.667 0 0 1 7.585 4zM7.585 6a.667.667 0 1 0 0 1.334.667.667 0 0 0 0-1.334"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <div
      class="ams-column _ColumnLargeScreen_0a51e6"
    >
      <h3
        class="ams-heading ams-heading--3"
      >
        Varen
      </h3>
      <p
        class="ams-paragraph"
      >
        Datum, 01-01-2020 17:50
      </p>
      <div>
        <button
          class="ams-button ams-button--secondary _LocationModalLink_fa327b ams-link _MaLink_10c0a4 _LocationModalLink_0a51e6"
          type="button"
        >
          Locatie Stadsloket Centrum, Amstel 1
        </button>
      </div>
      <a
        class="ams-link _Block_0a51e6 ams-mb-s _MaLink_10c0a4"
        href="#"
      >
        Voeg toe aan uw privé agenda
      </a>
      <div
        class="ams-row ams-row--align-vertical-center"
      >
        <a
          class="ams-link _MaLink_10c0a4 _MaRouterLink__no-underline_10c0a4"
          href="/qr/123"
        >
          <button
            class="ams-button ams-button--secondary"
            type="button"
          >
            Toon QR code
          </button>
        </a>
      </div>
    </div>
    <a
      class="ams-link _MaLink_10c0a4"
      href="https://cancel.com"
    >
      Annuleren
    </a>
  </div>
</DocumentFragment>
`;

exports[`Renders afspraak data > Small screen 1`] = `
<DocumentFragment>
  <div
    class="ams-row"
  >
    <div
      class="ams-column"
    >
      <div
        class="ams-row ams-row--gap-none"
      >
        <h3
          class="ams-heading ams-heading--3 _SmallScreenHeading_0a51e6"
        >
          Varen
        </h3>
        <span
          class="ams-icon ams-icon--heading-2"
          hidden=""
        >
          <svg
            aria-hidden="true"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M23 13h-4v1h4v2h-1.5v4h-2v-4h-15v4h-2v-4H1v-2h1.72l.593-2.374a2 2 0 0 1 1.94-1.515h4.662a2 2 0 0 1 1.94 1.515L12.448 14H17v-1h-4V6h10zM4.782 14h5.605l-.472-1.889H5.254zM15 11h2v-1h2v1h2V8h-6z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M7.857 4.014a2.67 2.67 0 0 1 2.394 2.653l-.014.272a2.667 2.667 0 0 1-2.652 2.394l-.273-.014a2.67 2.67 0 0 1-2.38-2.38l-.014-.272A2.667 2.667 0 0 1 7.585 4zM7.585 6a.667.667 0 1 0 0 1.334.667.667 0 0 0 0-1.334"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
      <p
        class="ams-paragraph"
      >
        Datum, 01-01-2020 17:50
      </p>
      <div>
        <button
          class="ams-button ams-button--secondary _LocationModalLink_fa327b ams-link _MaLink_10c0a4 _LocationModalLink_0a51e6"
          type="button"
        >
          Locatie Stadsloket Centrum, Amstel 1
        </button>
      </div>
      <a
        class="ams-link _Block_0a51e6 ams-mb-s _MaLink_10c0a4"
        href="#"
      >
        Voeg toe aan uw privé agenda
      </a>
      <div
        class="ams-row ams-row--align-vertical-center"
      >
        <a
          class="ams-link _MaLink_10c0a4 _MaRouterLink__no-underline_10c0a4"
          href="/qr/123"
        >
          <button
            class="ams-button ams-button--secondary"
            type="button"
          >
            Toon QR code
          </button>
        </a>
        <a
          class="ams-link _SmallScreenCancellationLink_0a51e6 _MaLink_10c0a4"
          href="https://cancel.com"
        >
          Annuleren
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
